fix player-select-dialog style and add scrollbar css

--- a/src/styles.css
+++ b/src/styles.css
@@ -44,3 +44,25 @@ button:disabled {
 .backdrop {
   @apply bg-gray-800 bg-opacity-75;
 }
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #374151 #1f2937;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #1f2937;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #374151;
+  border-radius: 10px;
+  border: 0px solid #ffffff;
+}
